<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>com.github.gbenroscience</groupId>
        <artifactId>parser-ng-parent</artifactId>
        <version>3.0.2</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    
    <artifactId>parser-ng</artifactId>
    <packaging>jar</packaging>
   
    <name>ParserNG</name>
    <description>Rich and Performant, Cross Platform Java Library(100% Java).No native dependencies. 
        ParserNG is the height of interpreted Math parsing in Java. It is the fastest of all interpreted Java math parsers.
        Features the introduction of native logic processing within the engine: the if(cond, trueVal, falseVal) method, the AND operator and the OR operator;
        automatic differentiation to the nth-order, a brand new symbolic differentiation engine, 
        a symbolic integration backed with a resilient numerical integration engine.
        For library support, customizations or donations, reach me at gbenroscience@gmail.com|+2348165779034
    </description>
    <url>https://github.com/gbenroscience/ParserNG</url>
    
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.github.gbenroscience.math.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Automatic-Module-Name>parser.ng</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>
</project>